Add the styled images under class page1

--- a/index.html
+++ b/index.html
@@ -8,3 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Street Food Restaurant Website</title>
 </head>
+<body>
+    <section class="page1">
+        <div class="circle">
+            <div class="dotted">
+                <img src="image 1.png" alt="food">
+                <img src="image 2.png" alt="food">
+                <img src="image 3.png" alt="food">
+                <img src="image 4.png" alt="food">
+                <img src="image 5.png" alt="food">
+            </div>
+        </div>
