Add the navigation list

--- a/index.html
+++ b/index.html
@@ -19,3 +19,17 @@
                 <img src="image 5.png" alt="food">
             </div>
         </div>
+
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#ourmenu">Our Menu</a></li>
+                <li><a href="#happyhour">Happy Tour</a></li>
+                <i class='fa fa-star' style='font-size:50px;color: #3E350A'></i>
+                <li><a href="#catering">Catering</a></li>
+                <li><a href="#reservation">Reservation</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
