--- a/index.html
+++ b/index.html
@@ -33,3 +33,6 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <div class="title">
+            <h2>Street Food</h2>
+        </div>
