Add the heading of page1 and style it using the span tag

--- a/index.html
+++ b/index.html
@@ -36,3 +36,5 @@
         <div class="title">
             <h2>Street Food</h2>
         </div>
+        <div class="food_title">
+            <h1><span style="color: #6CB840;">Street</span> <span style="color: #EAAB1B;"> Food</span></h1>
