Place the main display image to its location point

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
              </h5>
              <button class="order btn">Order Now</button>
         </div>
-        <div class="top_img">
-            <img class="img1" src="image 6.png" alt="food">
+        <div class="central_image">
+            <img class="img6" src="image 6.png" alt="food">
         </div>
     </section>
