Add two more containers

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
              </h5>
              <button class="order btn">Order Now</button>
         </div>
+        <!-- <div class="img_container1">
+               <img src="./Assets/image 2.png" alt="food">
+               <img src="./Assets/img3.png" alt="food">
+             </div>
+             <div class="img_container2">
+               <img src="./Assets/img4.png" alt="food">
+               <img src="./Assets/img6.png" alt="food">
+               <img src="./Assets/image 5.png" alt="food">
+             </div> -->
         <div class="central_image">
             <img class="img6" src="image 6.png" alt="food">
         </div>
