Add page2 of the project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
         <div class="title">
-            <h2>Street Food</h2>
+            <h1>Street Food</h1>
         </div>
         <div class="food_title">
             <h1><span style="color: #6CB840;">Street</span> <span style="color: #EAAB1B;"> Food</span></h1>
@@ -46,15 +46,25 @@
              <button class="order btn">Order Now</button>
         </div>
         <!-- <div class="img_container1">
-               <img src="./Assets/image 2.png" alt="food">
-               <img src="./Assets/img3.png" alt="food">
+               <img src="image 1.png" alt="food">
+               <img src="image 2.png" alt="food">
              </div>
              <div class="img_container2">
-               <img src="./Assets/img4.png" alt="food">
-               <img src="./Assets/img6.png" alt="food">
-               <img src="./Assets/image 5.png" alt="food">
+               <img src="image 3.png" alt="food">
+               <img src="image 4.png" alt="food">
+               <img src="image 5.png" alt="food">
              </div> -->
         <div class="central_image">
             <img class="img6" src="image 6.png" alt="food">
         </div>
     </section>
+    <div class="page2">
+        <img src="eating_together.png" alt="food">
+        <div class="eatpage2">
+            <h2><span style ="color: #EAAB1B">Eating together</span></h2>
+            <p>There is something profoundly satisfying about sharing
+                a meal.Eating together, breaking bread together, is one 
+                of the oldest and most fundamentally unifying of human
+                experiences.
+        </div>
+    </div>
