Add page3 to the page

--- a/index.html
+++ b/index.html
@@ -68,3 +68,33 @@
                 experiences.
         </div>
     </div>
+    <div class="menu">
+        <h3>Explore <span style="color: #6CB840;">Menu</span></h3>
+    <div class="menu_section1">
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+    </div>
+    <div class="menu_section1">
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+    </div>
