Add the contact section of our page

--- a/index.html
+++ b/index.html
@@ -98,3 +98,24 @@
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
     </div>
+    <div class="deals">
+        <h2>Hot <span style="color: #6CB840;">Deals</span></h2>
+        <div class="deals_container">
+          <div class="first">
+            <img class="first" src="image 9.png" alt="drink">
+            <img class="second" src="image 10.png" alt="burger">
+          </div>
+          <div class="info_text">
+              <h1 id="combo">SPECIAL COMBO PACK</h1>
+              <h2>Burger pizz</h2>
+              <h2>Fries & Drinks</h2>
+              <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+          </div>
+        </div>
+    </div>
+    <div class="contact">
+        <h2>Contact <span style="color: #6CB840;">Us</span></h2>
+        <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+        <input type="email" placeholder="Email">
+        <button class="btn">Email</button>
+    </div>
