Add the footer and style it

--- a/index.html
+++ b/index.html
@@ -119,3 +119,29 @@
         <input type="email" placeholder="Email">
         <button class="btn">Email</button>
     </div>
+    <div class="footer">
+        <div class="foot1">
+            <h5>Sunday - Thursday</h5>
+            <small>4pm</small>
+            <h5>Friday - Saturday</h5>
+            <small>4 - 10pm</small>
+        </div>
+        <div class="foot2">
+            <h5>(423) 266-1121</h5>
+            <small>801 Chestnut Street |</small>
+            <small>Chattanooga TN 37402</small>
+        </div>
+        <div class="foot3">
+            <h5>FOLLOW</h5>
+            <small>GET THE LATEST NEWS SIGN UP 
+                FOR OUR NEWSLETERS
+            </small>
+            <small>@Website Design</small>
+        </div>
+        <div class="foot4">
+            <i class="fa fa-instagram"></i>
+            <button>Send</button>
+        </div>
+    </div>
+</body>
+</html>
