--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
              <button class="order btn">Order Now</button>
         </div>
         <!-- <div class="img_container1">
-               <img src="image 1.png" alt="food">
-               <img src="image 2.png" alt="food">
+               <img id="1" src="image 1.png" alt="food">
+               <img id="2" src="image 2.png" alt="food">
              </div>
              <div class="img_container2">
-               <img src="image 3.png" alt="food">
-               <img src="image 4.png" alt="food">
-               <img src="image 5.png" alt="food">
+               <img id="1" src="image 3.png" alt="food">
+               <img id="2" src="image 4.png" alt="food">
+               <img id="3" src="image 5.png" alt="food">
              </div> -->
         <div class="central_image">
             <img class="img6" src="image 6.png" alt="food">
