Change a button value

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h2>Contact <span style="color: #6CB840;">Us</span></h2>
         <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
         <input type="email" placeholder="Email">
-        <button class="btn">Email</button>
+        <button class="btn">Send</button>
     </div>
     <div class="footer">
         <div class="foot1">
