Style the footer height

--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Street Food Restaurant Website</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Street Food Restaurant Website</title>
 </head>
 <body>
     <section class="page1">
-        <div class="circle">
-            <div class="dotted">
-                <img src="image 1.png" alt="food">
-                <img src="image 2.png" alt="food">
-                <img src="image 3.png" alt="food">
-                <img src="image 4.png" alt="food">
-                <img src="image 5.png" alt="food">
+        <div class="circlebackground">
+            <div class="dottedalignment">
+                <img src="image 1.png" alt="burgerfest">
+                <img src="image 2.png" alt="burgerfest">
+                <img src="image 3.png" alt="burgerfest">
+                <img src="image 4.png" alt="burgerfest">
+                <img src="image 5.png" alt="burgerfest">
             </div>
         </div>
-
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#ourmenu">Our Menu</a></li>
-                <li><a href="#happyhour">Happy Tour</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Our Menu</a></li>
+                <li><a href="#">Happy Tour</a></li>
                 <i class='fa fa-star' style='font-size:62px;color: #3E350A'></i>
-                <li><a href="#catering">Catering</a></li>
-                <li><a href="#reservation">Reservation</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Catering</a></li>
+                <li><a href="#">Reservation</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <div class="title">
+        <div class="maintitle">
             <h1>Street Food</h1>
         </div>
-        <div class="food_title">
+        <div class="content1">
             <h1><span style="color: #6CB840;">Street</span> <span style="color: #EAAB1B;"> Food</span></h1>
             <h2>We don't play with food</h2>
              <h5 class="text">When I was a small boy, my father told me never to recommend a church or a woman to 
@@ -45,15 +44,6 @@
              </h5>
              <button class="order btn">Order Now</button>
         </div>
-        <!-- <div class="img_container1">
-               <img id="1" src="image 1.png" alt="food">
-               <img id="2" src="image 2.png" alt="food">
-             </div>
-             <div class="img_container2">
-               <img id="1" src="image 3.png" alt="food">
-               <img id="2" src="image 4.png" alt="food">
-               <img id="3" src="image 5.png" alt="food">
-             </div> -->
         <div class="central_image">
             <img class="img6" src="image 6.png" alt="food">
         </div>
@@ -70,30 +60,30 @@
     </div>
     <div class="menu">
         <h3>Explore <span style="color: #6CB840;">Menu</span></h3>
-    <div class="menu_section1">
-        <div class="menu_item">
+    <div class="container4">
+        <div class="container5">
             <h4>Burger Name</h4>
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="menu_item">
+        <div class="container5">
             <h4>Burger Name</h4>
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="menu_item">
+        <div class="container5">
             <h4>Burger Name</h4>
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
     </div>
-    <div class="menu_section1">
-        <div class="menu_item">
+    <div class="container4">
+        <div class="container5">
             <h4>Burger Name</h4>
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="menu_item">
+        <div class="container5">
             <h4>Burger Name</h4>
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="menu_item">
+        <div class="container5">
             <h4>Burger Name</h4>
             <img src="image 8.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
@@ -120,25 +110,25 @@
         <button class="btn">Send</button>
     </div>
     <div class="footer">
-        <div class="foot1">
+        <div class="a">
             <h5>Sunday - Thursday</h5>
             <small>4pm</small>
             <h5>Friday - Saturday</h5>
             <small>4 - 10pm</small>
         </div>
-        <div class="foot2">
+        <div class="b">
             <h5>(423) 266-1121</h5>
             <small>801 Chestnut Street |</small>
             <small>Chattanooga TN 37402</small>
         </div>
-        <div class="foot3">
+        <div class="c">
             <h5>FOLLOW</h5>
             <small>GET THE LATEST NEWS SIGN UP 
                 FOR OUR NEWSLETERS
             </small>
             <small>@Website Design</small>
         </div>
-        <div class="foot4">
+        <div class="d">
             <i class="fa fa-instagram"></i>
             <button>Send</button>
         </div>
